[package]
authors = ["Stanislav Panferov <stanislav@panferov.dev>"]
description = "Rust declarative observables inspired by MobX"
edition = "2021"
homepage = "https://github.com/s-panferov/observe"
keywords = ["observable", "reactive", "frp"]
license = "MIT"
name = "observe"
repository = "https://github.com/s-panferov/observe"
version = "2.0.0"

[dependencies]
enclose = "1.2"
fxhash = "0.2"
tracing = "0.1"
smallvec = { version = "1.15", features = ["const_new"] }

arc-swap = "1.8"
futures = "0.3"
parking_lot = "0.12"
tokio = { version = "1.49", features = ["rt", "macros"] }
tokio-util = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]

[dev-dependencies]
mockall = "0.14"
